______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.187:

* XINS/Java Common Library:
  - If the LDAP path cannot be found, the LDAPServiceCaller return an empty
    QueryResult with isAuthenticated() returning false.
  - Fixed Javadoc in QueryResult.

* Generated build file:
  - The generated java files are removed if the impl.xml file has changed.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.186:

* XINS/Java Server Framework:
  - Removed some unused imports.
  - Removed the references to Log4j as it was replaced with logdoc.
  - Close the stream that read the runtime configuration file.
  - Renamed result code DisabledFunction to _DisabledFunction.
  - Added the logging of the CallResult arguments when a call fails.
  - The XML result is now sent in UTF-8 encoding format.

* XINS/Java Common Library:
  - Set the adjustment of the ExpiryFolder size in the doorman lock.
  - Decrease the size of the ExpiryFolder only if a value was removed.
  - Removed unneeded empty constructors.
  - Removed public modifiers for interfaces as it's the default.

* XINS/Java Client Framework:
  - Removed the references to Log4j as it was replaced with logdoc.
  - CallRequestParser closes the StringReader after its content is parsed.
  - ResultParser closes the StringReader after its content is parsed.

* Generated specification documentation:
  - The names for the enumeration type are also printed in the generated HTML.
  - Fixed a bug that prevented to create the index when at least one API uses
    the new directory structure.
    This bug has been in XINS since version 0.169.

* Generated build file:
  - Fixed incorrect targets classes and wars generated when at least one API
    uses the new directory structure.
    This bug has been in XINS since version 0.169.
  - Recreate the build.xml when an impl.xml file has changed.
